@@ -6,6 +6,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 == Unreleased
 
+=== Added
+
+- Group species lists by taxonomic groups in the AsciiDoc output
+
 === Fixed
 
 - Support species lists of Flora Helvetica exported from Favoriten
